--- a/WebContent/WEB-INF/zul/query/resultMoreLikeThis.zul
+++ b/WebContent/WEB-INF/zul/query/resultMoreLikeThis.zul
@@ -1,5 +1,5 @@
-<window id="resultMlt"
-	use="com.jaeksoft.searchlib.web.controller.query.ResultMoreLikeThisController">
+<window apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('resultMlt') @init('com.jaeksoft.searchlib.web.controller.query.ResultMoreLikeThisController')">
 	<!--
 		License Agreement for OpenSearchServer
 		Copyright (C) 2012 Emmanuel Keller / Jaeksoft
@@ -16,11 +16,11 @@
 		copy of the GNU General Public License along with OpenSearchServer.
 		If not, see <http://www.gnu.org/licenses/>.
 	-->
-	<grid visible="@{resultMlt.resultExists}">
+	<grid visible="@load(resultMlt.resultExists)">
 		<auxhead>
 			<auxheader colspan="4" label="Summary" align="right">
 				<button label="XML/HTTP API call" target="_blank"
-					href="@{query.requestApiCall}" />
+					href="@load(query.requestApiCall)" />
 			</auxheader>
 		</auxhead>
 		<columns visible="false">
@@ -32,19 +32,19 @@
 		<rows>
 			<row spans="1,3">
 				<label value="Query:" />
-				<label value="@{resultMlt.result.request.query}" />
+				<label value="@load(resultMlt.result.request.query)" />
 			</row>
 			<row>
 				<label value="Document(s) found:" />
-				<label value="@{resultMlt.result.numFound}" />
+				<label value="@load(resultMlt.result.numFound)" />
 				<label value="Time elapsed (ms):" />
-				<label value="@{resultMlt.result.timer.duration}" />
+				<label value="@load(resultMlt.result.timer.duration)" />
 			</row>
 			<row>
 				<label value="Start offset:" />
-				<label value="@{resultMlt.result.request.start}" />
+				<label value="@load(resultMlt.result.request.start)" />
 				<label value="Row(s) returned:" />
-				<label value="@{resultMlt.result.request.rows}" />
+				<label value="@load(resultMlt.result.request.rows)" />
 			</row>
 			<row></row>
 		</rows>
