--- a/WebContent/WEB-INF/zul/query/search/moreLikeThis.zul
+++ b/WebContent/WEB-INF/zul/query/search/moreLikeThis.zul
@@ -14,8 +14,8 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window id="mlt"
-	use="com.jaeksoft.searchlib.web.controller.query.MoreLikeThisController">
+<window apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('mlt') @init('com.jaeksoft.searchlib.web.controller.query.MoreLikeThisController')">
 	<grid>
 		<columns>
 			<column align="right" hflex="min" />
@@ -35,55 +35,59 @@
 			<row>
 				<label>Language:</label>
 				<listbox mold="select"
-					selectedItem="@{mlt.request.lang}" model="@{mlt.languageEnum}">
-					<listitem self="@{each=langEnum}"
-						label="@{langEnum.name}" value="@{langEnum}" />
+					selectedItem="@bind(mlt.request.lang)"
+					model="@load(mlt.languageEnum)">
+					<template name="model" var="langEnum">
+						<listitem label="@load(langEnum.name)"
+							value="@load(langEnum)" />
+					</template>
 				</listbox>
 			</row>
 			<row>
 				<label>Analyzer:</label>
 				<listbox mold="select"
-					selectedItem="@{mlt.request.analyzerName}"
-					model="@{mlt.analyzerNameList}" />
+					selectedItem="@bind(mlt.request.analyzerName)"
+					model="@load(mlt.analyzerNameList)" />
 			</row>
 			<row>
 				<label value="Fields: " />
-				<listbox model="@{mlt.request.fieldList.list}">
+				<listbox model="@load(mlt.request.fieldList.list)">
 					<listhead>
 						<listheader>
-							<listbox model="@{mlt.fieldsLeft}"
-								mold="select" selectedItem="@{mlt.selectedField}" />
+							<listbox model="@load(mlt.fieldsLeft)"
+								mold="select" selectedItem="@bind(mlt.selectedField)" />
 						</listheader>
 						<listheader width="50px" align="center">
 							<button tooltiptext="Add a field"
-								image="/images/action_add.png" forward="onAddField" />
+								image="/images/action_add.png" onClick="@command('onAddField')" />
 						</listheader>
 					</listhead>
-					<listitem self="@{each=mltField}">
-						<listcell label="@{mltField.name}" />
-						<listcell>
-							<custom-attributes mltField="@{mltField}" />
-							<button tooltiptext="Remove the field"
-								image="/images/action_delete.png"
-								onClick="mlt.onRemoveField(self)" />
-						</listcell>
-					</listitem>
+					<template name="model" var="mltField">
+						<listitem>
+							<listcell label="@load(mltField.name)" />
+							<listcell>
+								<button tooltiptext="Remove the field"
+									image="/images/action_delete.png"
+									onClick="@command('onRemoveField', mltField=mltField)" />
+							</listcell>
+						</listitem>
+					</template>
 				</listbox>
 			</row>
 			<row>
 				<label value="Stop words: " />
-				<listbox model="@{mlt.stopWordsList}" mold="select"
-					selectedItem="@{mlt.request.stopWords}" />
+				<listbox model="@load(mlt.stopWordsList)" mold="select"
+					selectedItem="@bind(mlt.request.stopWords)" />
 			</row>
 			<row>
 				<label>Start offset:</label>
 				<intbox cols="5" constraint="no empty, no negative"
-					value="@{mlt.request.start}" />
+					value="@load(mlt.request.start)" />
 			</row>
 			<row>
 				<label>Number of rows:</label>
 				<intbox cols="5" constraint="no empty, no negative"
-					value="@{mlt.request.rows}" />
+					value="@load(mlt.request.rows)" />
 			</row>
 		</rows>
 	</grid>
